# llm-command-r

./: README.md  llm_command_r.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: conftest.py  test_command_r.py
tests/cassettes/test_command_r/: test_prompt.yaml
